examples/bad/ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION/panic_in_one_branch_bool_in_another.st
language core;
extend with #panic, #sequencing;

fn main(n : Nat) -> Nat {
  return if false then panic! else true; 0
}


//ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION
